[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stereoigev"
description = "library version for IGEV"
readme = "README.md"
version = "0.0.3"
authors = [
    {name = "katsunori-waragai", email="huyuhiko1128@gmail.com"},
]

requires-python = ">= 3.8"

dependencies = [
    "numpy<2",
    "opencv-python==3.4.18.65",
    "scipy",
    "timm==0.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "gdown",
]

[project.urls]
Repository = "https://github.com/katsunori-waragai/libIGEVStereo"

[tool.setuptools]
packages = ["stereoigev"]

[tool.black]
line-length = 120
